--- a/MacroRePlayer/EditorForm.resx
+++ b/MacroRePlayer/EditorForm.resx
@@ -123,10 +123,10 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAABkSURBVDhPY6AWkAbihUC8m0i8AIhBeuAAJPCfRDwfiOFg
-        OxBjU/QairHJgfTAAS4DYqAYmxxRBryBYmxyRBkA8icIY5MjygCKvTBqAAkJieKkDMoYIEOwZRxsGKQZ
-        JTORCRgYAB+TqOlpDA2OAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EQAACxEBf2RfkQAAAGRJREFUOE9joBaQBuKFQLybSLwAiEF64AAk8J9EPB+I4WA7EGNT9BqKscmB9MAB
+        LgNioBibHFEGvIFibHJEGQDyJwhjkyPKAIq9MGoACQmJ4qQMyhggQ7BlHGwYpBklM5EJGBgAH5Oo6WkM
+        DY4AAAAASUVORK5CYII=
 </value>
   </data>
   <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
