Refactor editor buttons and update UI components
Změny v souboru `EditorForm.Designer.cs` zahrnují odstranění tlačítka `EditorFormButtonPaste` a jeho nahrazení tlačítkem `EditorFormButtonInsert`. Byly aktualizovány vlastnosti a obslužné rutiny pro nové tlačítko.

Byl nahrazen `toolTip1` s `EditorFormToolTip` a text nápovědy pro `pictureBox1` byl aktualizován. Velikost kontextového menu byla upravena a velikosti různých položek menu byly zmenšeny z 180 na 170.

V souboru `Form1.Designer.cs` byly přidány nové tlačítka a popisky související s metodami přehrávání a rychlostí, stejně jako tlačítko pro odstranění složky. Rozložení bylo upraveno pro tyto nové ovládací prvky a skupina editoru byla odstraněna.

Soubor `Form1.cs` byl aktualizován o nové obslužné rutiny událostí pro přidaná tlačítka a událost načtení formuláře byla upravena pro nastavení výchozích hodnot pro nové ovládací prvky.

V souboru `InputEvent.cs` došlo k drobné změně v třídě `MouseDownEvent`, kde zůstává vlastnost `Y` nezměněna, ale byla přeformátována.

Projektový soubor (`MacroRePlayer.csproj`) byl aktualizován tak, aby odstranil odkazy na `EventDisplayFunctionCreater.cs` a `EventEditorPanelBoxes.cs`, což naznačuje, že tyto soubory již nejsou součástí projektu.

--- a/MacroRePlayer/EditorForm.resx
+++ b/MacroRePlayer/EditorForm.resx
@@ -124,14 +124,29 @@
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DwAACw8BkvkDpQAAAGRJREFUOE9joBaQBuKFQLybSLwAiEF64AAk8J9EPB+I4WA7EGNT9BqKscmB9MAB
+        DQAACw0B7QfALAAAAGRJREFUOE9joBaQBuKFQLybSLwAiEF64AAk8J9EPB+I4WA7EGNT9BqKscmB9MAB
         LgNioBibHFEGvIFibHJEGQDyJwhjkyPKAIq9MGoACQmJ4qQMyhggQ7BlHGwYpBklM5EJGBgAH5Oo6WkM
         DY4AAAAASUVORK5CYII=
 </value>
   </data>
-  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="EditorFormToolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>228, 20</value>
   </metadata>
+  <data name="pictureBox1.ToolTip" xml:space="preserve">
+    <value>▲ UP - when pressed move selected event by one slot up
+          -  when hold move selected event to the top
+ ▼ DOWN - when pressed move selected event by one slot down
+                  - when hold move selected event to the bottom
+🗑 Delete - when pressed delete selected event
+📋 Copy - when pressed copy selected event
+📋 Extract - when pressed it will copy and delete selected event
+📋 Insert - when pressed inserts copied event
+
+LoopEvents must always be 
+an opening loop and a closing loop! 
+without this it will not allow you to save 
+the program. :)</value>
+  </data>
   <metadata name="HoldTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>316, 20</value>
   </metadata>
