Opraveno ukládání v EditorForm konkrétně KeyDown/KeyUp s Code
Upravena umístění `JsonFileSelectorComboBox` a `pictureBox1` v návrhovém souboru.
Byla přidána nová proměnná `secretValue` pro ukládání dodatečných informací o událostech.
Metoda `EditorEventsDataGridView.Rows.Add` byla upravena tak, aby zahrnovala `secretValue` jako nový sloupec.
Dále byla přidána logika pro získání `secretValue` z datové mřížky a její využití při zpracování událostí `KeyDown` a `KeyUp`.
Nové metadata byly přidány do souboru `EditorForm.resx`, což zlepšuje funkčnost editoru.

--- a/MacroRePlayer/EditorForm.resx
+++ b/MacroRePlayer/EditorForm.resx
@@ -162,4 +162,19 @@ the program. :)</value>
   <metadata name="EditorCommentColumn.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="EditorIconColumn.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="EditorEventColumn.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="EditorValueColumn.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="SecretValue.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="EditorCommentColumn.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
